<resources>
    <string name="app_name">Traveler</string>

    <!-- Shared Preferences -->
    <string name="pref_key">csc.b07.project.Preferences</string>
    <string name="pref_autolog">auto_login</string>
    <string name="pref_remember">remember_username</string>
    <string name="pref_r_pass">r_pass</string>
    <string name="pref_r_email">r_email</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="action_guest">Guest Login</string>
    <string name="exit">Exit</string>
    <string name="remember_username">Remember email</string>
    <string name="auto_login">Log me in automatically</string>
    <string name="error_email_exists">This email address already exists</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_email">No account exists with that email</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings used in ForgotActivity. -->
    <string name="forgot_pass_message">Please enter the email you used to register your account.
        A temporary password will be generated and displayed below.</string>
    <string name="send_password">Send Password</string>
    <string name="return_to_login">Return</string>
    <string name="password_send_fail">No user with this email was found.</string>
    <string name="password_send_success">Your new password is: %1$s</string>

    <!-- Strings used in registration. -->
    <string name="name_help">Enter your first name(s). You can change it later.</string>
    <string name="name_def">First Name(s)</string>

    <string name="last_help">Now, your last name.</string>
    <string name="last_def">Last Name</string>

    <string name="email_help">Your e-mail address will do for this one.</string>
    <string name="email_def">E-mail Address</string>

    <string name="cc_help">Your credit card number will be safe with us.</string>
    <string name="cc_def">Credit Card Number</string>

    <string name="address_help">Please enter your address.</string>
    <string name="address_def">Address</string>

    <string name="expiry_help">Lastly, your credit card expiry date.</string>
    <string name="expiry_def">Expiry: YYYY-MM-DD</string>

    <string name="pass_help">Your best safe, secure password.</string>
    <string name="cpass_help">Confirm the password you entered above.</string>
    <string name="pass_def">Password (6 to 16 characters)</string>
    <string name="cpass_def">Same password as above</string>

    <string name="register_submit">Submit</string>
    <string name="r_emailKey">r_emailKey</string>
    <string name="r_passKey">r_passKey</string>


    <!-- Strings used in Main activity -->
    <string name="hello_msg">Welcome! You may search below.</string>
    <string name="pass_msg">Your password has been newly set.</string>
    <string name="logout_button">Logout</string>
    <string name="title_activity_main"> </string>

    <string name="itin_search">Search Itineraries >></string>
    <string name="travel_search">Search Travels >></string>

    <string name="title_section1">Search</string>
    <string name="title_section2">User Info</string>
    <string name="title_section3">Upload Info</string>
    <string name="title_section4">Search Users</string>

    <!-- UserInfoFragment -->
    <string name="cancel">Cancel</string>
    <string name="booked_itin">Booked Itineraries: %1$d</string>

    <!-- SearchItineraryActivity -->
    <string name="search">Search</string>
    <string name="date_prompt">Departs: </string>
    <string name="origin_prompt">From: </string>
    <string name="dest_prompt">To: </string>
    <string name="vst_travel_time">Duration: %1$s</string>
    <string name="date_help">YYYY-MM-DD</string>
    <string name="sort">Sort by:</string>
    <string name="type">Type:</string>
    <string name="date_time_help">YYYY-MM-DD HH:mm</string>
    <string name="error_none">None were found. Please refine your search.</string>

    <string name="date_key">DateKey</string>
    <string name="dest_key">DestKey</string>
    <string name="origin_key">OriginKey</string>
    <string name="order_key">OrderKey</string>
    <string name="type_key">TypeKey</string>

    <!-- UserViewFragment -->
    <string name="user_name">%1$s</string>
    <string name="user_email">Email: %1$s</string>
    <string name="user_address">Address: %1$s</string>
    <string name="user_booked">%1$d booked itineraries</string>
    <string name="user_credit">Card: %1$s</string>
    <string name="user_expiry">Expires %1$s</string>

    <!-- UploadFragment -->
    <string name="upload_travel">Select a travel file.</string>
    <string name="upload_user">Select a user file.</string>
    <string name="upload_travel_def">Travel file</string>
    <string name="upload_user_def">User file</string>
    <string name="empty_file">Nothing could be read from that file. Maybe it was an incorrect path?</string>
    <string name="invalid_param">Invalid parameters.</string>
    <string name="updated">" updated fields."</string>
    <string name="added">" was added."</string>
    <string name="invalid_skip">" had invalid data. Skipping."</string>

    <!-- SearchUserFragment -->
    <string name="name_prompt">Name: </string>
    <string name="email_prompt">Email: </string>
    <string name="name_default">First and/or Last Name</string>
    <string name="email_default">Email address</string>
    <string name="search_name">Search Name</string>
    <string name="search_email">Search Email</string>
    <string name="search_both">Search Both</string>

    <string name="saved">Saved</string>
    <string name="add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="title_activity_register">Registration</string>
    <string name="title_activity_forgot_password">Forgot Password?</string>

    <!-- Strings used in ViewTravel -->
    <string name="vst_title_id">%1$s %2$s</string>
    <string name="vst_provider">%1$s</string>
    <string name="vst_origin">From %1$s</string>
    <string name="vst_destination">To %1$s</string>
    <string name="vst_start_date_time">Departs on %1$s</string>
    <string name="vst_arrival_date_time">Arrives on %1$s</string>
    <string name="vst_cost">Costs %1$d</string>
    <string name="vst_seats">%1$d seats left</string>
    <string name="vst_id">#idNumber</string>
    <string name="it_book">Book</string>
    <string name="it_unbook">Unbook</string>

    <!-- Strings used in EditTravelActivity -->
    <string name="prov_help">Provider</string>
    <string name="id_help">Unique ID</string>
    <string name="capacity_help">Number of Seats</string>
    <string name="origin_help">Origin</string>
    <string name="dest_help">Destination</string>
    <string name="start_help">Departure Time</string>
    <string name="end_help">Arrival Time</string>
    <string name="cost_help">Cost</string>
    <string name="error_id_exists">This ID already exists</string>
    <string name="error_invalid">This field is invalid</string>

    <!-- EditUserActivity -->
    <string name="book_for_user">Book an Itinerary</string>

    <string name="r_SingleTravelKey">TravelKey</string>

    <string name="title_activity_search">SearchActivity</string>
</resources>
