<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".main.MainFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_msg"
        android:id="@+id/welcome"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_msg"
        android:id="@+id/password"
        android:visibility="gone"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:clickable="true"
        android:onClick="logout"
        android:id="@+id/button8"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/origin_prompt"
        android:id="@+id/textView7"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/origin_help"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView7"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/dest_help"
        android:layout_below="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:layout_toEndOf="@+id/textView7"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dest_prompt"
        android:id="@+id/textView8"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date_prompt"
        android:id="@+id/textView9"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date"
        android:hint="@string/date_help"
        android:layout_below="@+id/name"
        android:layout_alignEnd="@+id/name"
        android:layout_toEndOf="@+id/button8"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner6"
        android:layout_below="@+id/date"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/date"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner7"
        android:layout_below="@+id/spinner6"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="56dp"
        android:layout_alignStart="@+id/spinner6"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itin_search"
        android:id="@+id/button9"
        android:onClick="searchItineraries"
        android:layout_below="@+id/spinner6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@+id/spinner6"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_search"
        android:id="@+id/button10"
        android:onClick="searchTravels"
        android:layout_below="@+id/spinner7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sort"
        android:id="@+id/textView13"
        android:layout_alignTop="@+id/spinner6"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/type"
        android:id="@+id/textView14"
        android:layout_alignTop="@+id/spinner7"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
