<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/content"
                tools:context=".main.SearchUserFragment">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_both"
        android:id="@+id/button7"
        android:onClick="searchBoth"
        android:layout_below="@+id/button11"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email_prompt"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email_default"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignEnd="@+id/button7"
        android:layout_toEndOf="@+id/textView5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_prompt"
        android:id="@+id/textView6"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/name_default"
        android:layout_below="@+id/email"
        android:layout_alignEnd="@+id/button7"
        android:layout_alignStart="@+id/email"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button7">

    </FrameLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_email"
        android:id="@+id/button11"
        android:onClick="searchEmail"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_name"
        android:id="@+id/button12"
        android:onClick="searchName"
        android:layout_above="@+id/button7"
        android:layout_alignEnd="@+id/button7"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:onClick="addUser"
        android:id="@+id/button13"
        android:layout_below="@+id/button11"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
