<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csc.project.interact.SearchTravelActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date"
        android:hint="@string/date_help"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/button7"
        android:onClick="search"
        android:layout_below="@+id/date"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date_prompt"
        android:id="@+id/textView4"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/origin_prompt"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/origin_help"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignEnd="@+id/button7"
        android:layout_toEndOf="@+id/textView5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dest_prompt"
        android:id="@+id/textView6"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/dest_help"
        android:layout_below="@+id/email"
        android:layout_alignEnd="@+id/button7"
        android:layout_alignStart="@+id/email"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner4"
        android:layout_below="@+id/date"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignEnd="@+id/spinner5"
        android:layout_alignStart="@+id/date"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner5"
        android:layout_below="@+id/button7"
        android:layout_alignStart="@+id/date"
        android:layout_toStartOf="@+id/add"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinner5"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:onClick="add"
        android:layout_alignTop="@+id/spinner5"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/button7"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sort"
        android:id="@+id/textView11"
        android:layout_alignTop="@+id/spinner4"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/type"
        android:id="@+id/textView12"
        android:layout_alignTop="@+id/spinner5"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
